--- a/about.Rmd
+++ b/about.Rmd
@@ -12,8 +12,10 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ### Olá!
   
-Esta página foi desenvolvida como meio de divulgação do projeto realizado referente as sementes da Amazônia durante o edital ... de Produção e Tecnologia de Sementes Florestais pelos engenheiros:
+Esta página foi desenvolvida como meio de divulgação do projeto realizado referente ao fornecimento de sementes do bioma Amazônico, atendendo as demandas referentes à Fundação de apoio a pesquisa em sementes e restauração de áreas degradadas – SEMAD.   
+
+O presente projeto foi elaborado em colaboração entre os engenheiros da rede de sementes **CHESKOJA SANJU**:
 Bruno Gonçalves, Gabriel F. Pereira, Gabriel Ribeiro, Rafael Adão e Leonardo Kobayashi.
 
  
-Portanto, o objetivo desse site é ...
+Portanto, o objetivo desse site é disseminar o conhecimento das principais propostas de impacto relacionadas ao projeto.
